# django-flex-importer

./: .gitignore  CELERY_SETUP.md  CELERY_TEST.md  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  KEY_FIELD_GUIDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  STALLED_JOBS_GUIDE.md  TESTING_INSTRUCTIONS.md  TROUBLESHOOTING.md  cleanup_example.py  pyproject.toml  requirements.txt  run_celery_tests.bat  setup.bat  setup.py  setup.sh  start_celery_worker.bat  test_celery_async.py
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
example_app/: admin.py  apps.py  importers.py  models.py  tests.py
example_app/migrations/: 0001_initial.py  0002_product.py  0003_alter_product_sku.py
flex_importer/: __init__.py  admin.py  apps.py  base.py  model_importer.py  models.py  processor.py  registry.py  tasks.py  utils.py
flex_importer/management/commands/: cleanup_stalled_imports.py  sync_import_metadata.py  sync_importer_permissions.py
flex_importer/migrations/: 0001_initial.py  0002_auto_20260113_1932.py  0003_rename_importlog_to_importjob.py  0004_add_importer_permissions.py
flex_importer/templates/admin/flex_importer/: change_form.html  change_list.html  import_form.html
sample_data/: README.md  ventas_ejemplo.csv  ventas_ejemplo.json
